body overflow fix

--- a/scheduled-page/scheduled.css
+++ b/scheduled-page/scheduled.css
@@ -3,6 +3,7 @@
   width: 77vw;
   height: 93vh;
   margin: calc(3vw / 2) auto;
+  overflow-x: hidden;
 }
 .scheduled_main .scheduled_nav {
   /* display: flex; */
